# agh-jimp2-cpp

./: .#.travis.yml  .travis.yml  README.md
lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  main.cpp
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/treeiterators/: Tree.cpp  Tree.h  TreeIterators.cpp  TreeIterators.h  main.cpp
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  CMakeLists.txt  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: SimpleForwardList.cpp  SimpleForwardList.h  main.cpp
lab2/xorcypherbreaker/: XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/minimaltimedifference/: MinimalTimeDifference.cpp  main.cpp  (+1 more)
lab6/academia/: CMakeLists.txt  StudentException.cpp  StudentRepository.cpp  StudentRepository.h  main.cpp
lab7/: CMakeLists.txt
lab7/comparable/: CMakeLists.txt  Comparable.cpp  Comparable.h  main.cpp
lab8/: CMakeLists.txt
lab8/student/: CMakeLists.txt  StudentException.cpp  StudentException.h  main.cpp
(+59 files in other folders)
